# WaiyatheCoder

SimpleCoder/: .gitignore  README.md  adventure.py  dungeon.py  game.py  main.py  pyproject.toml  requirements.txt
SimpleCoder/BudgetTracker/: build.gradle.kts
SimpleCoder/Data structures in C /counters/: README.md  makefile  testing.out
SimpleCoder/Data structures in C /hashtable/: README.md  hashtabletest.c  makefile
SimpleCoder/Data structures in C /set/: set.c
SimpleCoder/Game- nuggets/: Makefile
SimpleCoder/Game- nuggets /client/: client.h
SimpleCoder/Game- nuggets /libcs50/: fuzzquery  fuzzquery.c
SimpleCoder/Game- nuggets /maps/: bowlingmap.txt
SimpleCoder/Game- nuggets /server/: game.h  player.c  serverDisplay.c
SimpleCoder/Game- nuggets /support/: message.h
SimpleCoder/Tiny Search Engine /common/: index.h  makefile  pagedir.c
SimpleCoder/Tiny Search Engine /crawler/: crawler.c
SimpleCoder/Tiny Search Engine /indexer/: README.md  indexer.c
SimpleCoder/Tiny Search Engine /querier/: querier.c  testing.out
SimpleCoder/WaiyatheCoder/Game- nuggets/: README.md
SimpleCoder/WaiyatheCoder/Waiya's lab 5/: Breadth_first.py  cs1lib4.py  load_graph.py  map_plot.py  vertex.py
SimpleCoder/WaiyatheCoder/kog.3.09-shading-final 4/: kog.sublime-workspace
SimpleCoder/WaiyatheCoder/lab1-backup/: baking.avif  (+1 more)
SimpleCoder/lab1-backup/: README.md  style.css
SimpleCoder/lab2-quiz-platform-Waiya-coder/: wizard hatt.avif
SimpleCoder/simplecoder/: Adventure.py  __init__.py  agent.py  context.py  main.py  permissions.py  planner.py  rag.py  tools.py
(+121 files in other folders)
