[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplecoder"
version = "0.1.0"
description = "A CLI coding agent with ReAct, RAG, and task planning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "litellm>=1.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
]

[project.scripts]
simplecoder = "simplecoder.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["simplecoder*"]